dnl -*- mode: m4 -*-
AC_PREREQ(2.52)

AC_INIT(autostart-spec.xml)

AM_INIT_AUTOMAKE(autostart-spec, 0.5)

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

 ## must come before we use the $USE_MAINTAINER_MODE variable later
AM_MAINTAINER_MODE

AC_ARG_ENABLE(xml-docs,         [  --enable-xml-docs     build XML into HTML (requires xmlto)],enable_xml_docs=$enableval,enable_xml_docs=auto)

### XML tools

AC_PATH_PROG(XMLTO, xmlto, no)

AC_MSG_CHECKING([whether to build XML documentation])

if test x$XMLTO = xno ; then
    have_xmlto=no
else
    have_xmlto=yes
fi

if test x$enable_xml_docs = xauto ; then
    if test x$have_xmlto = xno ; then
        enable_xml_docs=no
    else
        enable_xml_docs=yes
    fi
fi

if test x$enable_xml_docs = xyes; then
    if test x$have_xmlto = xno; then
	AC_MSG_ERROR([Building XML docs explicitly required, but xmlto not found])
    fi
fi

AM_CONDITIONAL(XML_DOCS_ENABLED, test x$enable_xml_docs = xyes)
AC_MSG_RESULT(yes)

AC_OUTPUT([
Makefile
])

dnl ==========================================================================
echo "
                Autostart specification $VERSION
                  ==============

	prefix:                   ${prefix}
	source code location:	  ${srcdir}
        xmlto:                    ${XMLTO}"

echo "
        Maintainer mode:          ${USE_MAINTAINER_MODE}
        Building XML docs:        ${enable_xml_docs}
"
